fullSandbox11072023/force-app/main/default/objects/MANTA_Proctorship_Request__c/MANTA_Proctorship_Request__c.object-meta.xml
<CustomObject>
    <label>MANTA Proctorship Request</label>
    <nameField>
        <displayFormat>MPR-{00000}</displayFormat>
        <label>MANTA Proctorship Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MANTA Proctorship Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>