fullSandbox11072023/force-app/main/default/objects/MANTA_Proctorship_Request__c/fields/Case_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Case_Date_Formula__c</fullName>
    <formula>CASE( MOD( Case_Date__c - DATE(1900, 1, 7), 7), 0, &quot;Sunday&quot;, 1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3,
&quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, 6, &quot;Saturday&quot;,&quot;Error&quot;) 
&amp;&quot;, &quot;&amp;
CASE(MONTH(Case_Date__c),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
12, &quot;December&quot;,
&quot;None&quot;)
&amp;&quot; &quot;&amp;
TEXT(DAY( Case_Date__c)) &amp; &quot;, &quot; &amp; TEXT(YEAR(Case_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Date Formula</label>
    <type>Text</type>
</CustomField>