fullSandbox11072023/force-app/main/default/objects/MANTA_Proctorship_Request__c/fields/Case_Initiator__c.field-meta.xml
<CustomField>
    <fullName>Case_Initiator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Initiator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MANTA_Proctorship_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>