fullSandbox11072023/force-app/main/default/objects/MANTA_Proctorship_Request__c/fields/Days_Open__c.field-meta.xml
<CustomField>
    <fullName>Days_Open__c</fullName>
    <formula>IF(Status__c=&quot;Open (Not Accepted)&quot;, TODAY() - DATEVALUE(CreatedDate), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Open</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>