fullSandbox11072023/force-app/main/default/objects/MANTA_Proctorship_Request__c/fields/Estimated_of_Cases__c.field-meta.xml
<CustomField>
    <fullName>Estimated_of_Cases__c</fullName>
    <label>Estimated # of Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>