fullSandbox11072023/force-app/main/default/objects/MANTA_Proctorship_Request__c/fields/Hospital__c.field-meta.xml
<CustomField>
    <fullName>Hospital__c</fullName>
    <label>Hospital</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>MANTA Proctorship Requests</relationshipLabel>
    <relationshipName>MANTA_Proctorship_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>