fullSandbox11072023/force-app/main/default/objects/MANTA_Proctorship_Request__c/fields/HospitalAddress__c.field-meta.xml
<CustomField>
    <fullName>HospitalAddress__c</fullName>
    <formula>Hospital__r.Billing_Address_Full__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hospital Address</label>
    <type>Text</type>
</CustomField>