fullSandbox11072023/force-app/main/default/objects/MANTA_Proctorship_Request__c/fields/is5daysPastCaseDate__c.field-meta.xml
<CustomField>
    <fullName>is5daysPastCaseDate__c</fullName>
    <formula>IF( Case_Date__c + 5 &lt;  TODAY() , true, false )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is5daysPastCaseDate</label>
    <type>Checkbox</type>
</CustomField>