fullSandbox11072023/force-app/main/default/objects/MANTA_Proctorship_Request__c/fields/isArchived__c.field-meta.xml
<CustomField>
    <fullName>isArchived__c</fullName>
    <formula>IF( Case_Date__c &lt;= (TODAY() - 14) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isArchived</label>
    <type>Checkbox</type>
</CustomField>