fullSandbox11072023/force-app/main/default/objects/MANTA_Proctorship_Request__c/fields/isReqHaveCaseRecs__c.field-meta.xml
<CustomField>
    <fullName>isReqHaveCaseRecs__c</fullName>
    <label>isReqHaveCaseRecs</label>
    <summaryForeignKey>MANTA_Case_Data__c.MANTA_Proctorship_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>