fullSandbox11072023/force-app/main/default/objects/MANTA_Proctorship_Request__c/fields/Physician__c.field-meta.xml
<CustomField>
    <fullName>Physician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Physician</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>MANTA Proctorship Requests</relationshipLabel>
    <relationshipName>MANTA_Proctorship_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>