fullSandbox11072023/force-app/main/default/objects/MANTA_Proctorship_Request__c/fields/Physician_NPI_Number__c.field-meta.xml
<CustomField>
    <fullName>Physician_NPI_Number__c</fullName>
    <label>Physician NPI Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>