fullSandbox11072023/force-app/main/default/objects/MANTA_Proctorship_Request__c/fields/Proctor__c.field-meta.xml
<CustomField>
    <fullName>Proctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trainer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>MANTA_Proctorship_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>