fullSandbox11072023/force-app/main/default/objects/MANTA_Proctorship_Request__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <length>55</length>
    <type>Text</type>
</CustomField>