fullSandbox11072023/force-app/main/default/objects/MANTA_Proctorship_Request__c/fields/Total_Case_Data_Records__c.field-meta.xml
<CustomField>
    <fullName>Total_Case_Data_Records__c</fullName>
    <description>Total count of (Roll up summary of) Case Data Records on MANTA Requests.</description>
    <label>Total # Case Data Records</label>
    <summaryForeignKey>MANTA_Case_Data__c.MANTA_Proctorship_Request__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>